--- a/wiki/Sketcher_Workbench.html
+++ b/wiki/Sketcher_Workbench.html
@@ -3,28 +3,28 @@
 <li><a href="de/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="tr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Eskiz Tezgah&#305; (4% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
-<li><a href="es/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Ambiente de trabajo Croquizador (7% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier Sketcher (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="es/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Ambiente de trabajo Croquizador (8% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Sketcher (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/hr (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="it/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Sketcher (98% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="it/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Sketcher (97% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="hu/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="pl/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="pt-br/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Bancada de trabalho Sketcher (14% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (4% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="sk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&yacute; st&ocirc;l N&aacute;&#269;rtn&iacute;k (8% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
-<li><a href="fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="fi" dir="ltr">suomi</a></li>
+<li><a href="fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="sv/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="cs/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&iacute; plocha Skic&aacute;&#345; (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="cs/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Pracovn&iacute; plocha Sketcher (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="bg/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
-<li><a href="ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (91% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
+<li><a href="ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="zh/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/zh (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
 <li><a href="zh-cn/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#33609;&#22270;&#24037;&#20316;&#21488; (3% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="zh-hant/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
 <li><a href="zh-tw/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="&#36895;&#23531;&#22346; (0% translated)" lang="zh-Hant-TW" dir="ltr">&#20013;&#25991;&#65288;&#33274;&#28771;&#65289;</a></li>
-<li><a href="ja/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (91% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
-<li><a href="ko/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#49828;&#52992;&#52824; &#51089;&#50629;&#45824; (81% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ja/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (89% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
+<li><a href="ko/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#49828;&#52992;&#52824; &#51089;&#50629;&#45824; (79% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_Robot.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Workbench_Spreadsheet.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a>
@@ -317,7 +317,7 @@
 </p>
 <h4><span class="mw-headline" id="Use_horizontal_and_vertical_dimensions">Use horizontal and vertical dimensions</span></h4>
 <p><span typeof="mw:File"><a href="index.php?title=Sketcher_Flipping_HorVer_Dimensions.png&amp;filetimestamp=20250805174627&amp;.html" class="mw-file-description"><img src="File/Sketcher_Flipping_HorVer_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
-</p><p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a href="Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraints</a> can prevent flipping. Points constrained by these dimensions will not switch places. In the image above the added (orange) dimensional constraints are linked to the original dimensions via <a href="Expressions.html" title="Expressions">expressions</a>.
+</p><p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a> or <a href="Sketcher_ConstrainEqual.html" title="Sketcher ConstrainEqual">equal constraints</a> can prevent flipping. Points constrained by these dimensions will not switch places. In the image above the added (orange) dimensional constraints are linked to the original dimensions via <a href="Expressions.html" title="Expressions">expressions</a>.
 </p>
 <h4><span class="mw-headline" id="Use_angle_dimensions">Use angle dimensions</span></h4>
 <p><span typeof="mw:File"><a href="index.php?title=Sketcher_Flipping_Angular_Dimensions.png&amp;filetimestamp=20250805174512&amp;.html" class="mw-file-description"><img src="File/Sketcher_Flipping_Angular_Dimensions.png" decoding="async" width="300" height="258" class="mw-file-element" data-file-width="500" data-file-height="430"></a></span>
@@ -346,7 +346,7 @@
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sketcher</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Toggle Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Toggle Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a></li></ul>
+<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a></li></ul>
 <hr>
 <ul><li><b>Geometries:</b> <a href="Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Point</a>, <a href="Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>, <a href="Sketcher_CreateLine.html" title="Sketcher CreateLine">Line</a>, <a href="Sketcher_CreateArc.html" title="Sketcher CreateArc">Arc From Center</a>, <a href="Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Arc From 3 Points</a>, <a href="Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Elliptical Arc</a>, <a href="Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolic Arc</a>, <a href="Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolic Arc</a>, <a href="Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Circle From Center</a>, <a href="Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Circle From 3 Points</a>, <a href="Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipse From Center</a>, <a href="Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Ellipse From 3 Points</a>, <a href="Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a>, <a href="Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Centered Rectangle</a>, <a href="Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Rounded Rectangle</a>, <a href="Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Triangle</a>, <a href="Sketcher_CreateSquare.html" title="Sketcher CreateSquare">Square</a>, <a href="Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">Pentagon</a>, <a href="Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">Hexagon</a>, <a href="Sketcher_CreateHeptagon.html" title="Sketcher CreateHeptagon">Heptagon</a>, <a href="Sketcher_CreateOctagon.html" title="Sketcher CreateOctagon">Octagon</a>, <a href="Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a>, <a href="Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Slot</a>, <a href="Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Arc Slot</a>, <a href="Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>, <a href="Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodic B-Spline</a>, <a href="Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-Spline From Knots</a>, <a href="Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodic B-Spline From Knots</a>, <a href="Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a></li></ul>
 <hr>
@@ -379,35 +379,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251022171017
+Cached time: 20260122111320
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.505 seconds
-Preprocessor visited node count: 1738/1000000
-Post&#8208;expand include size: 33482/2097152 bytes
-Template argument size: 9240/2097152 bytes
+CPU time usage: 0.417 seconds
+Real time usage: 0.514 seconds
+Preprocessor visited node count: 1739/1000000
+Post&#8208;expand include size: 33454/2097152 bytes
+Template argument size: 9226/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4775/5000000 bytes
+Unstrip post&#8208;expand size: 4787/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.100      1 -total
- 20.40%    8.792      1 Template:Sketcher_Tools_navi
- 19.84%    8.552      2 Template:Navigation_menu_2
- 11.24%    4.846      1 Template:Userdocnavi
-  9.63%    4.151      1 Template:PropertyView
-  9.56%    4.122      8 Template:VersionPlus
-  7.82%    3.371     36 Template:Version
-  5.53%    2.382     14 Template:KEY
-  5.34%    2.300      2 Template:Docnav
-  5.21%    2.246      1 Template:Variable
+100.00%   37.855      1 -total
+ 15.99%    6.053      1 Template:Sketcher_Tools_navi
+ 14.73%    5.576      2 Template:Navigation_menu_2
+ 13.72%    5.192     36 Template:Version
+ 10.27%    3.887      5 Template:MenuCommand
+  8.19%    3.100      1 Template:Userdocnavi
+  7.13%    2.699      1 Template:PropertyView
+  6.42%    2.430      2 Template:Docnav
+  5.94%    2.249      6 Template:Caption
+  5.29%    2.004      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20251022171021 and revision id 1673088. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20260122111338 and revision id 1742291. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
