--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -33,9 +33,7 @@
 <li>xmlns="NAMESPACE"&nbsp;: sp&eacute;cifie l'espace de noms XML utilis&eacute;. Doit &ecirc;tre d&eacute;fini sur &laquo;&nbsp;<a rel="nofollow" class="external free" href="https://wiki.freecad.org/Package_Metadata">https://wiki.freecad.org/Package_Metadata</a>&nbsp;&raquo;.</li></ul>
 <p><span id="Required_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Balises_enfant_requises">Balises enfant requises</span></h4>
-</div>
+<h4><span class="mw-headline" id="Balises_requises">Balises requises</span></h4>
 <div class="mw-translate-fuzzy">
 <p>L'&eacute;l&eacute;ment &lt;package&gt; de niveau sup&eacute;rieur doit contenir au moins les balises suivantes&nbsp;:
 </p>
@@ -395,13 +393,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112834
+Cached time: 20260122112841
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.081 seconds
-Preprocessor visited node count: 523/1000000
+CPU time usage: 0.063 seconds
+Real time usage: 0.086 seconds
+Preprocessor visited node count: 522/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -411,17 +409,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.225      1 -total
- 28.77%    4.956      1 Template:Powerdocnavi/fr
- 13.83%    2.382     37 Template:Incode
- 13.60%    2.342      1 Template:Navigation_menu_2
- 12.66%    2.181      3 Template:Version/fr
- 12.01%    2.068      1 Template:Code
-  8.73%    1.503      1 Template:TOCright
-  7.41%    1.277      1 Template:MenuCommand
+100.00%   19.091      1 -total
+ 39.43%    7.528      1 Template:Powerdocnavi/fr
+ 16.05%    3.064      1 Template:Navigation_menu_2
+ 10.93%    2.086     37 Template:Incode
+  8.84%    1.688      3 Template:Version/fr
+  8.68%    1.657      1 Template:Code
+  8.37%    1.599      1 Template:TOCright
+  8.02%    1.531      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112834 and revision id 1742323. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112841 and revision id 1742325. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
