--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -34,10 +34,8 @@
 <p><span id="Required_Tags"></span>
 </p>
 <h4><span class="mw-headline" id="Balises_requises">Balises requises</span></h4>
-<div class="mw-translate-fuzzy">
-<p>L'&eacute;l&eacute;ment &lt;package&gt; de niveau sup&eacute;rieur doit contenir au moins les balises suivantes&nbsp;:
+<p>Les balises suivantes doivent &ecirc;tre pr&eacute;sentes dans l'&eacute;l&eacute;ment &lt;package&gt;&nbsp;:
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
@@ -393,13 +391,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112841
+Cached time: 20260122112900
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.086 seconds
-Preprocessor visited node count: 522/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.103 seconds
+Preprocessor visited node count: 521/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -409,17 +407,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.091      1 -total
- 39.43%    7.528      1 Template:Powerdocnavi/fr
- 16.05%    3.064      1 Template:Navigation_menu_2
- 10.93%    2.086     37 Template:Incode
-  8.84%    1.688      3 Template:Version/fr
-  8.68%    1.657      1 Template:Code
-  8.37%    1.599      1 Template:TOCright
-  8.02%    1.531      1 Template:MenuCommand
+100.00%   29.554      1 -total
+ 22.61%    6.682      1 Template:Powerdocnavi/fr
+ 15.98%    4.723      3 Template:Version/fr
+ 14.04%    4.149     37 Template:Incode
+ 13.41%    3.964      1 Template:Code
+ 12.24%    3.618      1 Template:Navigation_menu_2
+ 10.47%    3.095      1 Template:MenuCommand
+  5.46%    1.615      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112841 and revision id 1742325. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112900 and revision id 1742327. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
