--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -36,21 +36,17 @@
 <h4><span class="mw-headline" id="Balises_requises">Balises requises</span></h4>
 <p>Les balises suivantes doivent &ecirc;tre pr&eacute;sentes dans l'&eacute;l&eacute;ment &lt;package&gt;&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
 <li><a href="#.3Cdate.3E">&lt;date&gt;</a></li>
 <li><a href="#.3Cdescription.3E">&lt;description&gt;</a></li>
-<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a> (plusieurs, mais au moins un)</li>
-<li><a href="#.3Clicense.3E">&lt;license&gt;</a> (plusieurs, mais au moins un)</li>
-<li><a href="#.3Cicon.3E">&lt;icon&gt;</a> (plusieurs, mais au moins un)</li>
-<li><a href="#.3Ccontent.3E">&lt;content&gt;</a> (&eacute;l&eacute;ment conteneur pour les &eacute;l&eacute;ments de contenu du paquet)</li></ul>
-</div>
+<li><a href="#.3Cmaintainer.3E">&lt;maintainer&gt;</a></li>
+<li><a href="#.3Clicense.3E">&lt;license&gt;</a></li>
+<li><a href="#.3Cicon.3E">&lt;icon&gt;</a></li>
+<li><a href="#.3Ccontent.3E">&lt;content&gt;</a></li></ul>
 <p><span id="Optional_Tags"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Balises_enfant_facultatives">Balises enfant facultatives</span></h4>
-</div>
+<h4><span class="mw-headline" id="Balises_facultatives">Balises facultatives</span></h4>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> (plusieurs)</li>
 <li><a href="#.3Cauthor.3E">&lt;author&gt;</a> (plusieurs)</li>
@@ -391,13 +387,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112900
+Cached time: 20260122112941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 521/1000000
+CPU time usage: 0.066 seconds
+Real time usage: 0.087 seconds
+Preprocessor visited node count: 519/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -407,17 +403,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.554      1 -total
- 22.61%    6.682      1 Template:Powerdocnavi/fr
- 15.98%    4.723      3 Template:Version/fr
- 14.04%    4.149     37 Template:Incode
- 13.41%    3.964      1 Template:Code
- 12.24%    3.618      1 Template:Navigation_menu_2
- 10.47%    3.095      1 Template:MenuCommand
-  5.46%    1.615      1 Template:TOCright
+100.00%   17.539      1 -total
+ 31.64%    5.549      1 Template:Powerdocnavi/fr
+ 14.27%    2.503     37 Template:Incode
+ 13.68%    2.399      1 Template:Navigation_menu_2
+ 12.91%    2.264      3 Template:Version/fr
+  9.39%    1.647      1 Template:TOCright
+  8.21%    1.440      1 Template:Code
+  6.73%    1.181      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112900 and revision id 1742327. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112941 and revision id 1742331. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
