--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -47,17 +47,15 @@
 <p><span id="Optional_Tags"></span>
 </p>
 <h4><span class="mw-headline" id="Balises_facultatives">Balises facultatives</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> (plusieurs)</li>
-<li><a href="#.3Cauthor.3E">&lt;author&gt;</a> (plusieurs)</li>
-<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a> (plusieurs)</li>
-<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a> (plusieurs)</li>
-<li><a href="#.3Creplace.3E">&lt;replace&gt;</a> (plusieurs)</li>
-<li><a href="#.3Ctag.3E">&lt;tag&gt;</a> (plusieurs)</li>
+<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a></li>
+<li><a href="#.3Cauthor.3E">&lt;author&gt;</a></li>
+<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a></li>
+<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a></li>
+<li><a href="#.3Creplace.3E">&lt;replace&gt;</a></li>
+<li><a href="#.3Ctag.3E">&lt;tag&gt;</a></li>
 <li><a href="#.3Cfreecadmin.3E">&lt;freecadmin&gt;</a></li>
 <li><a href="#.3Cfreecadmax.3E">&lt;freecadmax&gt;</a></li>
 <li><a href="#.3Cpythonmin.3E">&lt;pythonmin&gt;</a></li></ul>
-</div>
 <h3><span id=".3Cname.3E"></span><span class="mw-headline" id="&lt;name&gt;">&lt;name&gt;</span></h3>
 <p>OBLIGATOIRE
 </p><p>Le nom de ce paquet. Ne doit contenir que des caract&egrave;res valides pour les noms de fichiers (les caract&egrave;res non autoris&eacute;s sont /\?%*:|"&lt;&gt; ).
@@ -387,13 +385,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112941
+Cached time: 20260122112954
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.087 seconds
-Preprocessor visited node count: 519/1000000
+CPU time usage: 0.077 seconds
+Real time usage: 0.105 seconds
+Preprocessor visited node count: 518/1000000
 Post&#8208;expand include size: 7957/2097152 bytes
 Template argument size: 2875/2097152 bytes
 Highest expansion depth: 5/100
@@ -403,17 +401,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.539      1 -total
- 31.64%    5.549      1 Template:Powerdocnavi/fr
- 14.27%    2.503     37 Template:Incode
- 13.68%    2.399      1 Template:Navigation_menu_2
- 12.91%    2.264      3 Template:Version/fr
-  9.39%    1.647      1 Template:TOCright
-  8.21%    1.440      1 Template:Code
-  6.73%    1.181      1 Template:MenuCommand
+100.00%   20.081      1 -total
+ 27.27%    5.477      1 Template:Powerdocnavi/fr
+ 14.70%    2.952     37 Template:Incode
+ 13.76%    2.764      1 Template:Code
+ 12.68%    2.547      1 Template:Navigation_menu_2
+ 10.99%    2.207      3 Template:Version/fr
+  9.17%    1.841      1 Template:TOCright
+  8.44%    1.694      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112941 and revision id 1742331. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112954 and revision id 1742333. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
