--- a/wiki/fr/Package_Metadata.html
+++ b/wiki/fr/Package_Metadata.html
@@ -86,22 +86,20 @@
 <h3><span id=".3Clicense.3E"></span><span class="mw-headline" id="&lt;license&gt;">&lt;license&gt;</span></h3>
 <p>AU MOINS UN OBLIGATOIRE (plusieurs autoris&eacute;s)
 </p><p>Identifiant court SPDX de la (des) licence(s) pour ce paquetage, par exemple BSD-2-Clause, GPL-3.0-or-later, LGPL-2.1-or-later. Pour faciliter la lecture par les machines, n'incluez que l'identifiant court SPDX de la licence (voir <a rel="nofollow" class="external text" href="https://spdx.org/licenses/">le site SPDX</a>). Pour les licences multiples, plusieurs balises distinctes doivent &ecirc;tre utilis&eacute;es. Un paquet aura plusieurs licences si les diff&eacute;rents fichiers sources ont des licences diff&eacute;rentes. Chaque licence pr&eacute;sente dans les fichiers source doit avoir une balise &lt;license&gt; correspondante. Pour tout texte explicatif concernant les avertissements relatifs &agrave; la licence, veuillez utiliser la balise &lt;description&gt;. Pour sp&eacute;cifier qu'aucune licence ne s'applique (par exemple, "Tous droits r&eacute;serv&eacute;s"), d&eacute;finissez cette valeur &agrave; "UNLICENSED". Pour sp&eacute;cifier une licence personnalis&eacute;e sans identifiant SPDX, d&eacute;finissez cette valeur &agrave; "SEE LICENSE IN &lt;filename&gt;".
+</p><p>Les licences les plus utilis&eacute;es&nbsp;:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Les licences les plus utilis&eacute;es&nbsp;:
-</p>
-<ul><li><code>"Apache-2.0"</code></li>
-<li><code>"BSD-2-Clause"</code></li>
-<li><code>"BSD-3-Clause"</code></li>
-<li><code>"BSL-1.0"</code></li>
-<li><code>"GPL-2.0-or-later"</code></li>
-<li><code>"GPL-3.0-or-later"</code></li>
-<li><code>"LGPL-2.1-or-later"</code></li>
-<li><code>"LGPL-3.0-or-later"</code></li>
-<li><code>"MIT"</code></li>
-<li><code>"MPL-1.1"</code></li>
-<li><code>"CC0-1.0"</code> (D&eacute;claration du domaine public)</li></ul>
-</div>
+<ul><li><code>Apache-2.0</code></li>
+<li><code>BSD-2-Clause</code></li>
+<li><code>BSD-3-Clause</code></li>
+<li><code>BSL-1.0</code></li>
+<li><code>GPL-2.0-or-later</code></li>
+<li><code>GPL-3.0-or-later</code></li>
+<li><code>LGPL-2.1-or-later</code></li>
+<li><code>LGPL-3.0-or-later</code></li>
+<li><code>MIT</code></li>
+<li><code>MPL-1.1</code></li>
+<li><code>CC-BY-SA-4.0</code></li>
+<li><code>CC0-1.0</code></li></ul>
 <p><b>Note de r&eacute;trocompatibilit&eacute;</b>&nbsp;: le gestionnaire des extensions tentera de normaliser les identifiants de licence qui ne correspondent pas exactement &agrave; une cha&icirc;ne de licence SPDX. Il en r&eacute;sultera parfois un identifiant de licence qui produira une licence non-FSF-Libre ou non approuv&eacute;e par l'OSI&nbsp;: par exemple, "LGPL2" sera normalis&eacute; en "LGPL-2.0", qui est une licence non-FSF-Libre&nbsp;: ce qui &eacute;tait probablement pr&eacute;vu &eacute;tait "LGPL-2.1-or-later".
 </p><p><span id="Attributes"></span>
 </p>
@@ -385,15 +383,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122112954
+Cached time: 20260122113012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.105 seconds
-Preprocessor visited node count: 518/1000000
-Post&#8208;expand include size: 7957/2097152 bytes
-Template argument size: 2875/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 523/1000000
+Post&#8208;expand include size: 7960/2097152 bytes
+Template argument size: 2865/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -401,17 +399,17 @@ Unstrip post&#8208;expand size: 8522/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.081      1 -total
- 27.27%    5.477      1 Template:Powerdocnavi/fr
- 14.70%    2.952     37 Template:Incode
- 13.76%    2.764      1 Template:Code
- 12.68%    2.547      1 Template:Navigation_menu_2
- 10.99%    2.207      3 Template:Version/fr
-  9.17%    1.841      1 Template:TOCright
-  8.44%    1.694      1 Template:MenuCommand
+100.00%   29.388      1 -total
+ 32.55%    9.567      1 Template:Powerdocnavi/fr
+ 13.16%    3.868      1 Template:Navigation_menu_2
+ 12.14%    3.568     38 Template:Incode
+ 11.88%    3.492      1 Template:MenuCommand
+ 10.89%    3.201      1 Template:Code
+ 10.01%    2.942      3 Template:Version/fr
+  6.19%    1.819      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122112954 and revision id 1742333. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278530-0!canonical and timestamp 20260122113012 and revision id 1742335. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
