--- a/wiki/cs/Sketcher_CreatePolyline.html
+++ b/wiki/cs/Sketcher_CreatePolyline.html
@@ -64,7 +64,7 @@
 <p>N&aacute;stroj <span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePolyline.svg&amp;filetimestamp=20240101090758&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Skic&aacute;&#345; Vytvo&#345;it lomenou &#269;&aacute;ru</a> vytvo&#345;&iacute; s&eacute;rii &uacute;se&#269;ek a oblouk&#367; spojen&yacute;ch jejich koncov&yacute;mi body. N&aacute;stroj m&aacute; n&#283;kolik re&#382;im&#367;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_PolylineExample1.png&amp;filetimestamp=20180802080526&amp;.html" class="mw-file-description"><img src="../File/Sketcher_PolylineExample1.png" decoding="async" width="521" height="216" class="mw-file-element" data-file-width="521" data-file-height="216"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Polyline started with a line, a tangent arc, a perpendicular arc then a tangent line.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Lomen&aacute; &#269;&aacute;ra za&#269;&iacute;n&aacute; p&#345;&iacute;mkou, te&#269;nou klenbou, kolmou klenbou a te&#269;nou p&#345;&iacute;mkou.</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span id="Pou.C5.BEit.C3.AD"></span><span class="mw-headline" id="Pou&#382;it&iacute;">Pou&#382;it&iacute;</span></h2>
@@ -141,15 +141,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122133657
+Cached time: 20260122134023
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.126 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 391/1000000
-Post&#8208;expand include size: 27789/2097152 bytes
-Template argument size: 10563/2097152 bytes
+Post&#8208;expand include size: 27795/2097152 bytes
+Template argument size: 10566/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 2754/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.417      1 -total
- 30.48%    8.053      1 Template:Sketcher_Tools_navi/cs
- 20.63%    5.450      1 Template:Userdocnavi/cs
- 19.29%    5.097      1 Template:GuiCommand
- 18.94%    5.002      2 Template:Navigation_menu_2
-  8.33%    2.202      2 Template:Docnav
-  7.19%    1.899      8 Template:KEY
-  7.14%    1.887      1 Template:Caption
-  5.13%    1.356      1 Template:Button
-  4.57%    1.206      2 Template:MenuCommand
+100.00%   42.312      1 -total
+ 47.79%   20.219      1 Template:Sketcher_Tools_navi/cs
+ 18.01%    7.622      1 Template:GuiCommand
+ 12.65%    5.354      1 Template:Userdocnavi/cs
+ 12.01%    5.082      2 Template:Navigation_menu_2
+  5.97%    2.528      2 Template:Docnav
+  5.56%    2.353      8 Template:KEY
+  5.10%    2.160      2 Template:MenuCommand
+  4.85%    2.053      1 Template:Caption
+  3.12%    1.322      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122133656 and revision id 1742373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:113219-0!canonical and timestamp 20260122134023 and revision id 1742375. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
